# Drone

./: CMakeLists.txt  CommandeXMLCreation  Dependencies  Initialization.cpp  Initialization.h  PeopleRecognition.cpp  PeopleRecognition.h  RecognitionLearning.cpp  RecognitionLearning.h  WatershedSegmenter.h  convertCascade  main.cpp  tools.cpp  tools.h  trainingScript  vecScript
